schema/testdata/validation_permission_attribute_missing_actions/schema.keel
model Person {
    @permission(
        expression: true
    )
}