schema/testdata/errors/permission_attribute_missing_actions.keel
model Person {
    //expect-error:5:16:AttributeArgumentError:required argument 'actions' missing
    @permission(expression: true)
}
